cabal-version:      3.0
name:               AoC
version:            0.1.0.0
synopsis:           Advent of Code 20 solutions

-- A longer description of the package.
-- description:
homepage: https://github.com/jrc0114/AdventOfCode

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Chloe Coward
maintainer:         chloebot5006@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Program.RunDay
        , Util.Util
        , Util.Parsing
        , Days.Day01
        , Days.Day02
        , Days.Day03
        , Days.Day04
        , Days.Day05
        , Days.Day06
        , Days.Day07
        , Days.Day08
        , Days.Day09
        , Days.Day10
        , Days.Day11
        , Days.Day12
        , Days.Day13
        , Days.Day14
        , Days.Day15
        , Days.Day16
        , Days.Day17
        , Days.Day18
        , Days.Day19
        , Days.Day20
        , Days.Day21
        , Days.Day22
        , Days.Day23
        , Days.Day24
        , Days.Day25

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    default-extensions:
        LambdaCase
        TupleSections
        OverloadedStrings
        GADTs
    build-depends:
        base ^>=4.17.0.0
        , attoparsec
        , text
        , optparse-applicative
        , array
    hs-source-dirs:   src
    default-language: Haskell2010

executable AoC
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    default-extensions:
        LambdaCase
    build-depends:
        base ^>=4.17.0.0
        , optparse-applicative
        , containers
        , text
        , AoC

    hs-source-dirs:   app
    default-language: Haskell2010
